--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
                                     <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="75"
                                         aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
+                                <p>React Js 40%</p>
+                                <div class="progress rounded-0">
+                                    <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="75" aria-valuemin="0"
+                                        aria-valuemax="100"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -332,7 +337,7 @@
                             <div class="col-md-8">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        BookMark App
+                                        Movzie
                                     </p>
                                     <span class="web">web design </span>
                                     <span> / 18 Sep. 2018</span>
@@ -340,7 +345,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card-icon py-3 h-100 d-flex justify-content-center align-items-center">
-                                    <a href="https://diaamohamed013.github.io/bookMarker/" target="_blank"
+                                    <a href="https://diaamohamed013.github.io/movie_p/" target="_blank"
                                         class="btn btn-dark">View Site</a>
                                 </div>
                             </div>
